jquery and html

--- a/3.HTML/html.html
+++ b/3.HTML/html.html
@@ -8,7 +8,7 @@
     <script src="1.get.js"></script>
     <script src="2.set.js"></script>
     <script src="3.add.js"></script>
-    <script src="4.remove.js"></script>
+    <script src="4.remove1.js"></script>
     <script src="5.css_classes.js"></script>
     <script src="6.css().js"></script>
     <script src="7.dimensions.js"></script>
@@ -36,10 +36,14 @@
 
     <div class="add">
         <img src="https://www.w3schools.com/images/w3jquery.gif" alt="">
-        <p class="p1"></p>
-        <p class="p2"></p>
-        <p class="p3"></p>
-        <p class="p4"></p>
+        <p class="p1">paragraph one</p>
+        <p class="p2">paragraph two</p>
+        <p class="p3">paragraph three</p>
+        <p class="p4">paragraph four</p>
+        <button class="css_class">get css class</button>
+        <br>
+        <br>
+        <button class="dime">dimension</button>
     </div>
 </body>
 </html>
