--- a/4.Traversing/traverse.html
+++ b/4.Traversing/traverse.html
@@ -11,9 +11,30 @@
     <script src="3.descendants.js"></script>
     <script src="4.siblings.js"></script>
     <script src="5.filtering.js"></script>
-    
 </head>
 <body>
+    <div class="sibling1 child1">
+        <p>
+            <article>
+                <span><a href="#">home</a></span>
+            </article>
+            </p>
+    </div>
+    <div class="sibling2 child2">
+        <ul>
+            <li class="sibling">siblings()</li>
+            <li class="next">next()</li>
+            <li class="nextall">nextAll()</li>            
+            <li class="nextuntil">nextUntil()</li>
+            <li class="prev">prev()</li>
+            <li class="prevall">prevAll()</li>
+            <li class="prevuntil">prevUntil()</li>
+        </ul>
+
+    </div>
+    <div class="sibling3 child3">
+
+    </div>
     
 </body>
 </html>
